--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/search-patient.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/search-patient.html
@@ -25,9 +25,10 @@
 				<div class="mb-3"><label for="floatingInput4">Last Name:</label>
 				<input class="form-control form-control-sm" id="floatingInput4" type="text" placeholder="Last Name" aria-label=".form-control-sm example" name="last_name">
 				</div>
-		    <button class="btn btn-primary" type="submit">
+			<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+		    <button class="btn btn-outline-primary" type="submit">
 				<i class="fas fa-search"></i>
-				Search</button>
+				Search</button></div>
 		  </form>
 
 		</div>
@@ -50,7 +51,7 @@
 					</a>
 				</div>
 			</h5>
-			<table class="table table-primary table-striped table-bordered table-sm table-hover">
+			<table class="table table-light table-striped table-bordered table-sm table-hover">
 				
 					<tr>
 						<th>Record #</th>
@@ -75,7 +76,7 @@
 			</table>
 					<div class="d-grid gap-2 d-md-flex justify-content-md-end">
 						<a href="{% url 'search-patient' %}"
-						<button class="btn btn-danger">
+						<button class="btn btn-outline-danger">
 							<i class="fas fa-times"></i>
 							Clear Search</button></a>
 					</div>
